hphp/hack/test/typecheck/like_types/dynamic_coercion/like_decl_types/tvarray.php.exp
File "tvarray.php", line 5, characters 24-30:
Invalid return type (Typing[4110])
File "tvarray.php", line 5, characters 37-42:
Expected varray<_>
File "tvarray.php", line 5, characters 24-30:
But got dynamic
File "tvarray.php", line 9, characters 21-32:
Invalid return type (Typing[4110])
File "tvarray.php", line 9, characters 39-49:
Expected varray<int>
File "tvarray.php", line 9, characters 21-32:
But got dynamic
